fix overlapping element shoppingcart

--- a/sass/pages/_shoppingcart.scss
+++ b/sass/pages/_shoppingcart.scss
@@ -14,6 +14,7 @@
   margin: 0 auto 0 auto;
   padding: 20px;
   text-align: left;
+  margin-top: 50px;
 
   #shopImg {
     width: 80px;
